--- a/src/en/kb/index.html
+++ b/src/en/kb/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Knowledge Base
-description: VPN knowledge base: fundamentals, protocols, and practical tips.
+title: "VPN Knowledge Base (2026): Guides & Protocols"
+description: "VPN knowledge base (2026): fundamentals, protocols (WireGuard/OpenVPN/IPsec), security & privacy basics, and practical troubleshooting tips."
 permalink: /vpn/en/kb/
 lang: en
 ---
