--- a/src/en/kb/open-source-vpn/index.html
+++ b/src/en/kb/open-source-vpn/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Open-source VPN software
-description: A practical overview of well-known open-source VPN software and related protocols.
+title: Open-source VPN Software & Protocols (2026)
+description: "A practical 2026 overview of open-source VPN software and protocols: WireGuard, OpenVPN, IPsec (strongSwan/Libreswan), SoftEther, OpenConnect, plus modern overlays like Nebula and ZeroTier."
 permalink: /vpn/en/kb/open-source-vpn/
 lang: en
 ---
