--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: VPN Recommendations & Reviews
-description: Scenario-based VPN recommendations and reviews focused on privacy protection and connection security.
+title: Best VPN Recommendations & Reviews (2026)
+description: "2026 VPN recommendations and reviews by use case: privacy & security, remote work, travel, streaming, and reliability on restrictive networks. Practical buying tips and alternatives."
 permalink: /vpn/en/recommend/
 lang: en
 ---
