--- a/src/kb/index.html
+++ b/src/kb/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: 知识库
-description: VPN 知识库：基础概念、协议原理、使用技巧与避坑指南。
+title: VPN 知识库：指南、协议与实用技巧（2026）
+description: 2026 VPN 知识库：VPN 基础概念、协议原理（WireGuard/OpenVPN/IPsec 等）、安全与隐私要点、使用技巧与常见问题排查。
 permalink: /vpn/kb/
 ---
 
