--- a/src/kb/open-source-vpn/index.html
+++ b/src/kb/open-source-vpn/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: 开源 VPN 软件
-description: 常见开源 VPN / VPN 协议与实现简介（IPsec、SoftEther、OpenConnect、Tinc、Nebula、ZeroTier）。
+title: 开源 VPN 软件与协议简介（2026）
+description: 2026 开源 VPN 软件与协议简介：WireGuard、OpenVPN、IPsec（strongSwan/Libreswan）、SoftEther、OpenConnect 以及 ZeroTier/Nebula 等相关网络技术，含对比与选型建议。
 permalink: /vpn/kb/open-source-vpn/
 ---
 
