--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: VPN 推荐与评测
-description: 面向普通用户的 VPN 推荐与评测：按使用场景快速选型，包含总览、闭眼入系列、跨境系列与常见问题。
+title: VPN 推荐（按场景选型）与评测（2026）
+description: 2026 VPN 推荐与评测：按跨境办公/学习、海外 SaaS 与 AI 工具、流媒体、游戏、公共 Wi‑Fi 隐私与安全等场景快速选型，并提供避坑建议与备选方案。
 permalink: /vpn/recommend/
 ---
 
