--- a/src/en/kb/open-source-vpn/index.html
+++ b/src/en/kb/open-source-vpn/index.html
@@ -17,6 +17,26 @@ lang: en
   </p>
 </div>
 
+<h2>Top tier (modern mainstream)</h2>
+
+<h3>1. WireGuard®</h3>
+<img class="kb-logo-block" src="/assets/images/wireguard.jpeg" alt="WireGuard" loading="lazy" />
+<div class="section-body">
+  <ul style="margin-top: 0;">
+    <li><strong>Why it matters:</strong> minimal, fast, and modern cryptography; widely adopted</li>
+    <li><strong>Best for:</strong> mobile usage, roaming networks, modern consumer VPNs</li>
+  </ul>
+</div>
+
+<h3>2. OpenVPN</h3>
+<img class="kb-logo-block" src="/assets/images/openvpn_logo.png" alt="OpenVPN" loading="lazy" />
+<div class="section-body">
+  <ul style="margin-top: 0;">
+    <li><strong>Why it matters:</strong> long-standing, flexible, very mature ecosystem</li>
+    <li><strong>Best for:</strong> enterprise compatibility, complex network requirements</li>
+  </ul>
+</div>
+
 <h2>Top tier (legacy but still widely used)</h2>
 
 <h3>1️⃣ IPsec (strongSwan / Libreswan)</h3>
