--- a/src/kb/index.html
+++ b/src/kb/index.html
@@ -12,7 +12,7 @@ permalink: /vpn/kb/
   如果你想先快速选型，请先看 <a href="/vpn/recommend/">VPN 推荐与评测（按场景）</a>。
 </p>
 
-<h2>入门与培训</h2>
+<h2>知识分享</h2>
 <ul>
   <li><a href="/vpn/kb/open-source-vpn/">开源 VPN 软件</a></li>
 </ul>
