--- a/src/kb/open-source-vpn/index.html
+++ b/src/kb/open-source-vpn/index.html
@@ -32,7 +32,8 @@ permalink: /vpn/kb/open-source-vpn/
 
 <h2>一线主流开源 VPN</h2>
 
-<h3><img class="kb-logo" src="/assets/images/wireguard.jpeg" alt="WireGuard" loading="lazy" />1. WireGuard® - 现代 VPN 的标杆</h3>
+<h3>1. WireGuard® - 现代 VPN 的标杆</h3>
+<img class="kb-logo-block" src="/assets/images/wireguard.jpeg" alt="WireGuard" loading="lazy" />
 <div class="section-body">
   <div style="font-weight: 900;">为什么它重要</div>
   <p style="margin-top: 6px;">WireGuard 以简洁、快速和安全的特性迅速成为行业新标准，尤其适合现代网络环境与移动端场景。</p>
@@ -52,7 +53,8 @@ permalink: /vpn/kb/open-source-vpn/
   </ul>
 </div>
 
-<h3><img class="kb-logo" src="/assets/images/openvpn_logo.png" alt="OpenVPN" loading="lazy" />2. OpenVPN - 成熟稳重的老将</h3>
+<h3>2. OpenVPN - 成熟稳重的老将</h3>
+<img class="kb-logo-block" src="/assets/images/openvpn_logo.png" alt="OpenVPN" loading="lazy" />
 <div class="section-body">
   <div style="font-weight: 900;">定位与特点</div>
   <p style="margin-top: 6px;">OpenVPN 是历史最悠久、应用最广泛的开源 VPN 方案之一，以稳定性与功能丰富著称。</p>
