--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -1,12 +1,12 @@
 ---
 layout: base.njk
-title: Best VPN Recommendations & Reviews (2026)
-description: "2026 VPN recommendations and reviews by use case: privacy & security, remote work, travel, streaming, and reliability on restrictive networks. Practical buying tips and alternatives."
+title: Best VPN Reviews & Selection Guide (2026)
+description: "2026 VPN reviews and selection guide by use case: privacy & security, remote work, travel, streaming, and reliability on restrictive networks. Practical buying tips and alternatives."
 permalink: /vpn/en/recommend/
 lang: en
 ---
 
-<h1>VPN recommendations & reviews (2026)</h1>
+<h1>VPN reviews & selection guide (2026)</h1>
 
 <div class="notice">
   Note: This page provides reviews and information about VPN / network privacy tools for legitimate use cases such as privacy protection and connection security. Laws and policies vary by region. Please comply with applicable laws and terms of service.
