--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -1,11 +1,11 @@
 ---
 layout: base.njk
-title: VPN 推荐（按场景选型）与评测（2026）
-description: 2026 VPN 推荐与评测：按跨境办公/学习、海外 SaaS 与 AI 工具、流媒体、游戏、公共 Wi‑Fi 隐私与安全等场景快速选型，并提供避坑建议与备选方案。
+title: VPN 评测与选择指南（2026）
+description: 2026 VPN 评测与选择指南：按跨境电商、办公与学习、海外 SaaS 与 AI 工具、流媒体、游戏、公共 Wi‑Fi 隐私与安全等场景快速选型，并提供避坑建议与备选方案。
 permalink: /vpn/recommend/
 ---
 
-<h1>VPN 推荐与评测（2026）</h1>
+<h1>VPN 评测与选择指南（2026）</h1>
 
 <div style="margin: 10px 0 16px; padding: 10px 12px; border: 1px solid rgba(0,0,0,0.12); border-radius: 8px; background: rgba(0,0,0,0.03);">
   <div style="line-height: 1.7;">
@@ -31,7 +31,7 @@ permalink: /vpn/recommend/
 <h2 id="why">🧾一、 为什么要做这份 VPN 评测？</h2>
 
 <p>
-很多用户选择 VPN，并不只出于“娱乐”目的，而是在日常的工作、学习和跨境使用中，反复遇到一些普遍的问题：账号登录频繁异常、公共 Wi-Fi 使用存在安全隐患、跨境服务不稳定、或是部分在线工具和服务偶发性无法正常连接。<a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
+很多用户选择 VPN，并不只出于“娱乐”目的，而是在日常的工作、学习和跨境使用中，反复遇到一些普遍的问题：账号登录频繁异常、公共 Wi-Fi 使用存在安全隐患、跨境服务不稳定、或是部分在线工具和服务偶发性无法正常连接。需要使用 VPN 的场景很多，比如：
 </p>
 
 <div class="hero-banner">
@@ -63,7 +63,7 @@ permalink: /vpn/recommend/
 
 <p>
 <strong>使用说明：</strong>
-本页重点讨论 VPN 在<strong>连接稳定性</strong>、<strong>隐私保护</strong>、<strong>跨境访问体验</strong>等方面的差异，并给出更省心的购买路径。
+本页重点讨论 VPN 在<strong>连接稳定性</strong>、<strong>隐私保护</strong>、<strong>跨境访问体验</strong>等方面的差异，并给出更省心的购买路径。<a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
 </p>
 
 <h2 id="overview">📚二、 VPN总览</h2>
