--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -10,6 +10,8 @@ lang: en
 
 <div class="notice">
   Note: This page provides reviews and information about VPN / network privacy tools for legitimate use cases such as privacy protection and connection security. Laws and policies vary by region. Please comply with applicable laws and terms of service.
+  <br />
+  Regional note: this page is mainly intended for readers outside Mainland China. If you are in Mainland China, please refer to <a href="/vpn/en/guide/airport-vpn-review/" rel="nofollow">our Mainland network note (Guide)</a>.
 </div>
 
 <div style="margin: 12px 0 16px; padding: 12px 12px; border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; background: rgba(0,0,0,0.02);">
