--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -11,6 +11,7 @@ permalink: /vpn/recommend/
   <div style="line-height: 1.7;">
     提示：本页是面向<strong>跨境电商、办公与学习</strong>、<strong>海外 SaaS、AI 工具</strong>、<strong>流媒体与内容平台</strong>、以及<strong>公共 Wi-Fi 安全与隐私保护</strong>等需求的 VPN 选型与购买参考。
     你可以直接从「闭眼入」先选一款开始试用（优先选有退款保障的），减少踩坑与试错成本。
+    由于各地区网络环境与合规要求差异较大，本页内容主要供<strong>中国大陆地区以外</strong>的用户参考；如你在中国大陆地区，请参考 <a href="/vpn/guide/airport-vpn-review/" rel="nofollow">国内网络专题（Guide）</a>。
   </div>
 </div>
 
