--- a/src/guide/airport-vpn-review/index.html
+++ b/src/guide/airport-vpn-review/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-title: 翻墙机场评测与推荐（不收录）
+title: 翻墙机场评测与推荐
 description: 本页面不参与 SEO，不允许收录，不进 sitemap。
 permalink: /vpn/guide/airport-vpn-review/
 noindex: true
@@ -8,7 +8,7 @@ nointerlink: true
 sitemap: false
 ---
 
-<h1>翻墙机场评测与推荐（不收录）</h1>
+<h1>翻墙机场评测与推荐</h1>
 
 <p>
   本页面属于 Guide 目录：不参与 SEO、不允许收录、不进 sitemap、且不做站内互链。
