--- a/src/guide/index.html
+++ b/src/guide/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-title: Guide（不收录）
+title: Guide
 description: 本目录为不参与 SEO 的内部指南内容，不允许收录，不进 sitemap。
 permalink: /vpn/guide/
 noindex: true
@@ -8,7 +8,7 @@ nointerlink: true
 sitemap: false
 ---
 
-<h1>Guide（不收录）</h1>
+<h1>Guide</h1>
 
 <p>
   本目录及其下属页面不参与 SEO：不允许收录、不进 sitemap、不做站内互链。
