--- a/src/en/guide/index.html
+++ b/src/en/guide/index.html
@@ -36,6 +36,10 @@ sitemap: false
   This site is mainly for Mainland China readers and provides references including:
 </p>
 
+<div class="hero-banner">
+  <img src="/assets/images/GFW.jpeg" alt="Network environment illustration" loading="lazy" />
+</div>
+
 <ul>
   <li><strong>Hands-on testing notes</strong> for VPN / network tools</li>
   <li><strong>Summaries from credible sources</strong> (technical communities and long-term user feedback)</li>
@@ -53,18 +57,24 @@ sitemap: false
   <li>What you should avoid</li>
 </ul>
 
-<h2>1. Why we maintain a separate Mainland China guide</h2>
+<h3>Article list (updated over time)</h3>
+
+<p>
+  New Guide articles will be linked here.
+</p>
+
+<ul>
+  <li><a href="/vpn/en/guide/airport-vpn-review/" rel="nofollow">Proxy / "Airport" reviews & recommendations</a>: criteria, risks, and how to choose more carefully (Guide).</li>
+</ul>
+
+<h2>2. Why we maintain a separate Mainland China guide</h2>
 
 <p>
   In Mainland China, network conditions and access policies can lead to instability and fluctuating connectivity for cross-border services.
   Therefore, experiences described in “global rankings” often do not translate well.
 </p>
 
-<div class="hero-banner">
-  <img src="/assets/images/GFW.jpeg" alt="Network environment illustration" loading="lazy" />
-</div>
-
-<h2>2. What this Guide includes</h2>
+<h2>3. What this Guide includes</h2>
 
 <ul>
   <li><strong>Basics:</strong> key terms and prerequisites to reduce trial-and-error.</li>
@@ -73,11 +83,7 @@ sitemap: false
   <li><strong>Article index:</strong> all new content will be linked from this page.</li>
 </ul>
 
-<div class="hero-banner">
-  <img src="/assets/images/SS.png" alt="Client screenshot" loading="lazy" />
-</div>
-
-<h2>3. Key terms (beginners)</h2>
+<h2>4. Key terms (beginners)</h2>
 
 <h3>What does “bypassing restrictions” mean?</h3>
 
@@ -112,6 +118,10 @@ sitemap: false
 
 <h3>What is an “Airport”?</h3>
 
+<div class="hero-banner">
+  <img src="/assets/images/SS.png" alt="Client screenshot" loading="lazy" />
+</div>
+
 <p>
   “Airport” is a Mainland China slang term for certain proxy subscription providers. They often have these characteristics:
 </p>
@@ -127,14 +137,14 @@ sitemap: false
   This is not an official category and there is no unified standard — quality can vary widely.
 </p>
 
-<h2>3. Usage notes (important)</h2>
+<h2>5. Usage notes (important)</h2>
 
 <ul>
   <li>We do not claim “always works” or “100% stable”. Conditions change over time.</li>
   <li>For long-term decisions, short-cycle and small-budget trials are usually safer.</li>
 </ul>
 
-<h2>4. “Airport” essentials (very important)</h2>
+<h2>6. “Airport” essentials (very important)</h2>
 
 <p>
   The following points are not fear-mongering — they are based on many real user experiences:
@@ -147,7 +157,7 @@ sitemap: false
   <li><strong>Prefer providers with 3+ years of operation.</strong> No guarantees, but they have typically survived multiple rounds of restrictions and have more operational experience.</li>
 </ol>
 
-<h2>5. A few blunt truths (pitfalls)</h2>
+<h2>7. A few blunt truths (pitfalls)</h2>
 
 <ul>
   <li>Claims like “permanently stable” or “never blocked” are usually unreliable</li>
@@ -156,31 +166,21 @@ sitemap: false
   <li>Clear instructions, refund rules, and a visible history are usually better signs</li>
 </ul>
 
-<h2>6. Our position & disclosure</h2>
+<h2>8. Our position & disclosure</h2>
 
 <p>
   This site is not driven by a “get-rich-quick” motive. Our goal is to provide more realistic and useful references on VPN and network tools for Mainland China readers,
   helping you make safer and more rational decisions.
 </p>
 
-<h2>7. Affiliate disclosure</h2>
+<h2>9. Affiliate disclosure</h2>
 
 <p>
   Some pages may contain product recommendation links. If you purchase through them, we may earn a small commission.
   This does not increase your cost. The proceeds help cover hosting, testing, and ongoing content updates.
 </p>
 
-<h2>8. Article list (updated over time)</h2>
-
-<p>
-  New Guide articles will be linked here.
-</p>
-
-<ul>
-  <li><a href="/vpn/en/guide/airport-vpn-review/" rel="nofollow">Proxy / "Airport" reviews & recommendations</a>: criteria, risks, and how to choose more carefully (Guide).</li>
-</ul>
-
-<h2>9. A final note</h2>
+<h2>10. A final note</h2>
 
 <p>
   Network conditions change, tools change — there is no one-time solution.
