--- a/src/guide/index.html
+++ b/src/guide/index.html
@@ -16,6 +16,10 @@ sitemap: false
   很多在海外评价很高、在欧美能稳定使用的 VPN，在国内可能会出现：
 </p>
 
+<div class="hero-banner">
+  <img src="/assets/images/GFW.jpeg" alt="Network environment illustration" loading="lazy" />
+</div>
+
 <ul>
   <li>无法连接</li>
   <li>速度极慢</li>
@@ -51,18 +55,24 @@ sitemap: false
   <li>什么一定要避开</li>
 </ul>
 
-<h2>1. 为什么需要单独做“国内网络专题”</h2>
+<h3>文章列表（持续更新）</h3>
+
+<p>
+  新增文章会统一从这里链接，方便你按需阅读。
+</p>
+
+<ul>
+  <li><a href="/vpn/guide/airport-vpn-review/" rel="nofollow">翻墙机场评测与推荐</a>：评测维度、风险点、如何更稳妥地做选择（Guide）。</li>
+</ul>
+
+<h2>2. 为什么需要单独做“国内网络专题”</h2>
 
 <p>
   在中国大陆地区，不同网络环境与访问策略会导致部分跨境连接出现不稳定、连通性波动等情况。
   因此，直接照搬“海外榜单”的体验描述，往往不够准确。
 </p>
 
-<div class="hero-banner">
-  <img src="/assets/images/GFW.jpeg" alt="Network environment illustration" loading="lazy" />
-</div>
-
-<h2>2. 本专题会包含哪些内容</h2>
+<h2>3. 本专题会包含哪些内容</h2>
 
 <ul>
   <li><strong>基础概念：</strong>常见名词解释与使用前提，帮助新手减少试错成本。</li>
@@ -71,11 +81,7 @@ sitemap: false
   <li><strong>文章目录：</strong>所有新增内容都会从本页持续向下链接。</li>
 </ul>
 
-<div class="hero-banner">
-  <img src="/assets/images/SS.png" alt="Client screenshot" loading="lazy" />
-</div>
-
-<h2>3. 常见术语解释（新手必读）</h2>
+<h2>4. 常见术语解释（新手必读）</h2>
 
 <h3>什么是“翻墙”？</h3>
 
@@ -110,6 +116,9 @@ sitemap: false
 
 <h3>什么是“机场”？</h3>
 
+<div class="hero-banner">
+  <img src="/assets/images/SS.png" alt="Client screenshot" loading="lazy" />
+</div>
 <p>
   “机场”是国内用户对代理服务提供商的一种俗称，通常具有以下特点：
 </p>
@@ -125,14 +134,14 @@ sitemap: false
   机场不是一个官方概念，也不是统一标准，质量高度参差不齐。
 </p>
 
-<h2>3. 使用说明（重要）</h2>
+<h2>5. 使用说明（重要）</h2>
 
 <ul>
   <li>我们不会承诺“永久稳定”或“100% 可用”。网络环境与策略会变化。</li>
   <li>如果你要做长期选择，更建议使用“短周期、小额试用”的方式验证。</li>
 </ul>
 
-<h2>4. 机场使用必知（非常重要）</h2>
+<h2>6. 机场使用必知（非常重要）</h2>
 
 <p>
   以下内容不是危言耸听，而是来自大量用户真实经历的总结：
@@ -145,7 +154,7 @@ sitemap: false
   <li><strong>优先选择运营时间 ≥ 3 年的服务。</strong>虽然不能保证一定安全，但至少经历过多轮封锁，有一定技术和运营经验，跑路概率相对更低。</li>
 </ol>
 
-<h2>5. 关于“避坑”的几点实话</h2>
+<h2>7. 关于“避坑”的几点实话</h2>
 
 <ul>
   <li>宣称“永久稳定”“永不被封”的，基本不可信</li>
@@ -154,33 +163,23 @@ sitemap: false
   <li>有明确使用说明、退款规则、历史记录的相对靠谱</li>
 </ul>
 
-<h2>6. 关于本站的立场与说明（重要）</h2>
+<h2>8. 关于本站的立场与说明（重要）</h2>
 
 <p>
   本站是一个非盈利导向的网站，主要目标是：为国内用户提供相对真实、有参考价值的 VPN 软件与网络工具信息，帮助你更安全、更理性地访问互联网。
 </p>
 
-<h2>7. 佣金与推荐说明</h2>
+<h2>9. 佣金与推荐说明</h2>
 
 <p>
   部分页面可能包含产品推荐链接；如果你通过链接购买，我们可能会获得少量佣金。
   这不会增加你的使用成本，这些回报将用于服务器维护、测试成本与内容持续更新。
 </p>
 
-<h2>8. 文章列表（持续更新）</h2>
+<h2>10. 最后想说的一句话</h2>
 
 <p>
-  新增文章会统一从这里链接，方便你按需阅读。
-</p>
-
-<ul>
-  <li><a href="/vpn/guide/airport-vpn-review/" rel="nofollow">翻墙机场评测与推荐</a>：评测维度、风险点、如何更稳妥地做选择（Guide）。</li>
-</ul>
-
-<h2>9. 最后想说的一句话</h2>
-
-<p>
-  网络环境在变化，工具在变化，没有一劳永逸的方案。我们能做的，是把已知的信息尽量摊开讲清楚。
+  网络环境在变化，工具在变化，没有一劳永逸的方案。我们能做的，是把已知的信息尽量摊开讲清楚.
 </p>
 
 <p>
