--- a/src/en/guide/index.html
+++ b/src/en/guide/index.html
@@ -65,7 +65,7 @@ sitemap: false
 
 <ul>
   <li><a href="/vpn/en/guide/airport-vpn-review/" rel="nofollow">Proxy / "Airport" reviews & recommendations</a>: criteria, risks, and how to choose more carefully (Guide).</li>
-  <li><a href="/vpn/en/guide/tech-intro/" rel="nofollow">Mainland China tech intro</a>: why the Clash + subscription model often appears more resilient than traditional VPN and many commercial VPNs (Guide).</li>
+  <li><a href="/vpn/en/guide/tech-intro/" rel="nofollow">Mainland China tech intro</a>: why the Clash + subscription model appears more resilient.</li>
 </ul>
 
 <h2>2. Why we maintain a separate Mainland China guide</h2>
