--- a/src/guide/index.html
+++ b/src/guide/index.html
@@ -63,7 +63,7 @@ sitemap: false
 
 <ul>
   <li><a href="/vpn/guide/airport-vpn-review/" rel="nofollow">翻墙机场评测与推荐</a>：评测维度、风险点、如何更稳妥地做选择（Guide）。</li>
-  <li><a href="/vpn/guide/tech-intro/" rel="nofollow">国内翻墙技术介绍</a>：为什么 Clash + 机场模式的“生命力”往往强于传统 VPN 与商业 VPN（Guide）。</li>
+  <li><a href="/vpn/guide/tech-intro/" rel="nofollow">国内翻墙技术介绍</a>：为什么 Clash + 机场模式的“生命力”更强。</li>
 </ul>
 
 <h2>2. 为什么需要单独做“国内网络专题”</h2>
