--- a/src/en/terms/index.html
+++ b/src/en/terms/index.html
@@ -2,7 +2,7 @@
 layout: base.njk
 title: Terms & Conditions
 description: Terms and conditions.
-permalink: false
+permalink: /en/terms/
 lang: en
 ---
 
