--- a/src/guide/index.html
+++ b/src/guide/index.html
@@ -64,6 +64,11 @@ sitemap: false
 <ul>
   <li><a href="/vpn/guide/airport-vpn-review/" rel="nofollow">翻墙机场评测与推荐</a>：评测维度、风险点、如何更稳妥地做选择（Guide）。</li>
   <li><a href="/vpn/guide/tech-intro/" rel="nofollow">国内翻墙技术介绍</a>：为什么 Clash + 机场模式的“生命力”更强。</li>
+  <li><a href="/vpn/guide/gfw-airport-war/" rel="nofollow">知己知彼：GFW 与机场的攻防之战</a>：从概率识别、TLS 指纹到主动探测，理解“不稳定”的根源。</li>
+  <li><a href="/vpn/guide/anti-blocking-protocols/" rel="nofollow">机场协议如何抗封锁</a>：REALITY、Trojan、QUIC 系协议怎么选，一张表看懂优先级。</li>
+  <li><a href="/vpn/guide/vless-reality/" rel="nofollow">VLESS + Reality 技术详解</a>：从分层模型拆解“代理层”和“伪装层”，理解为什么它能成为抗封锁天花板。</li>
+  <li><a href="/vpn/guide/reality-deep-dive/" rel="nofollow">继续深挖 Reality</a>：Reality 不是 HTTP/3；它是借用 QUIC + TLS 外观的抗封锁工程实现。</li>
+  <li><a href="/vpn/guide/precision-blocking/" rel="nofollow">精准封锁，一抓一个准？（第三方观察）</a>：从客户端逆向、主动探测到大数据关联，理解“精准打击”是如何发生的。</li>
 </ul>
 
 <h2>2. 为什么需要单独做“国内网络专题”</h2>
