--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,27 @@
 ---
 permalink: /
 layout: base.njk
-title: VPN 推荐与评测指南
-description: VPN 推荐与评测指南：按场景选型、评测文章列表与评测方法说明，聚焦隐私保护与连接安全。
+title: VPN 评测与选择指南（2026）
+description: 按场景选型、评测文章列表与评测方法说明，聚焦隐私保护与连接安全。
 ---
 
-<h1>VPN 推荐与评测指南（2026）</h1>
+<h1>VPN 评测与选择指南</h1>
 
 <p>
-  这里整理 VPN 的选购思路与真实使用评测，重点覆盖<strong>隐私保护</strong>与<strong>连接安全</strong>等合规场景，并按使用场景给出更省心的选择路径。
+  本站整理 VPN 技术、评测相关内容：场景化推荐、评测文章与方法说明。
 </p>
 
-<h2>从这里开始</h2>
-<ul>
-  <li><a href="/vpn/recommend/">VPN 推荐与评测（按使用场景快速选型）</a></li>
-  <li><a href="/vpn/posts/">VPN 评测文章列表（按品牌汇总）</a></li>
-  <li><a href="/vpn/review-methodology/">VPN 评测方法说明</a></li>
-</ul>
+<div class="vpn-card" style="padding: 14px;">
+  <div style="font-weight: 900; margin-bottom: 8px;">入口</div>
+  <div style="display:flex; gap: 10px; flex-wrap: wrap;">
+    <a class="vpn-btn" href="/vpn/recommend/">中文：VPN 推荐与评测</a>
+    <a class="vpn-btn" href="/vpn/en/recommend/" rel="nofollow">English: VPN recommendations &amp; reviews</a>
+  </div>
+</div>
 
-<h2>使用提醒</h2>
-<p>
-  不同地区网络环境与政策会随时间变化，请在遵守当地法律法规与平台条款的前提下使用相关服务。
-  更多说明见 <a href="/disclaimer/">免责声明</a>。
+<p style="margin-top: 14px;">
+  你也可以直接浏览：
+  <a href="/vpn/posts/">评测文章列表</a>
+  或
+  <a href="/vpn/kb/">知识库</a>。
 </p>
