--- a/src/kb/index.html
+++ b/src/kb/index.html
@@ -15,4 +15,5 @@ permalink: /vpn/kb/
 <h2>知识分享</h2>
 <ul>
   <li><a href="/vpn/kb/open-source-vpn/">开源 VPN 软件</a></li>
+  <li><a href="/vpn/kb/https-quic-http3/">Chrome 访问 HTTPS 网站时数据如何传输：从 TCP 到 QUIC/HTTP3</a></li>
 </ul>
