--- a/src/en/kb/index.html
+++ b/src/en/kb/index.html
@@ -10,7 +10,7 @@ lang: en
 
 <p>
   This section contains training-style articles and fundamentals about VPNs, cross-border connectivity, and related tools.
-  For scenario-based recommendations first, see <a href="/vpn/en/recommend/">VPN recommendations & reviews</a>.
+  For scenario-based recommendations first, see <a href="/en/">VPN recommendations & reviews</a>.
 </p>
 
 <h2>Fundamentals</h2>
