--- a/src/en/review-methodology/index.html
+++ b/src/en/review-methodology/index.html
@@ -67,5 +67,5 @@ lang: en
 </p>
 
 <div style="margin: 12px 0; display:flex; gap: 10px; flex-wrap: wrap;">
-  <a href="/vpn/en/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">View VPN recommendations based on this methodology</a>
+  <a href="/en/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">View VPN recommendations based on this methodology</a>
 </div>
