--- a/src/kb/index.html
+++ b/src/kb/index.html
@@ -9,7 +9,7 @@ permalink: /vpn/kb/
 
 <p>
   这里收录与 VPN / 跨境网络 / 数字工具相关的基础知识与培训文章。
-  如果你想先快速选型，请先看 <a href="/vpn/recommend/">VPN 推荐与评测（按场景）</a>。
+  如果你想先快速选型，请先看 <a href="/">VPN 推荐与评测（按场景）</a>。
 </p>
 
 <h2>知识分享</h2>
