--- a/src/review-methodology/index.html
+++ b/src/review-methodology/index.html
@@ -70,5 +70,5 @@ permalink: /vpn/review-methodology/
 </p>
 
 <div style="margin: 12px 0; display:flex; gap: 10px; flex-wrap: wrap;">
-  <a href="/vpn/recommend/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">直接去看：按场景整理的 VPN 推荐榜单</a>
+  <a href="/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">直接去看：按场景整理的 VPN 推荐榜单</a>
 </div>
