--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 layout: base.njk
 title: VPN 评测与选择指南（2026）
 description: 2026 VPN 评测与选择指南：按跨境电商、办公与学习、海外 SaaS 与 AI 工具、流媒体、游戏、公共 Wi‑Fi 隐私与安全等场景快速选型，并提供避坑建议与备选方案。
-permalink: false
+permalink: /
+lang: zh
 ---
 
 <h1>VPN 评测与选择指南（2026）</h1>
